# Coupe_de_france_de_robotique

./: CMakeLists.txt  TODO  package.xml
scripts/: detector.py  example_nav_through_poses.py  example_nav_to_pose.py  initial_pose_publisher.py  lidar_distance_node.py  max_launch.py
src/: cylinder_detector.cpp  invert_laser.cpp  multi_pose_navigator.cpp  robot_manager.cpp
src/config/: gz_bridge.yaml  mapper_params_online_async.yaml  my_controllers.yaml  nav2_params.yaml  nav2_params_new.yaml  twist_mux.yaml
src/description/: aruco.xacro  gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro  world.xacro
src/gazebo/: map.dae  map.mtl
src/gazebo/Bean_Can_Aruco/: CanAruco.sdf  Joshka_cannette1.mtl  model.config
src/launch/: launch_robot.launch.py  launch_sim.launch.py  localization_launch.py  localization_launch_new.py  navigation_launch.py  navigation_launch_new.py  on_output_launch.py  online_async_launch.py  rsp.launch.py  ultimate_launch.py
src/my_map/: my_map_save.pgm  my_map_save.yaml  my_map_serial.data
src/scripts/: multi_pose_navigator.cpp
src/serial_communication/: arduino_serial_node_read.cpp  arduino_serial_node_write.cpp
src/worlds/: cdfdr.world  convert_to_array.py  empty.world  output.json  position.txt  position_alone.txt
